welcome.lessons.welcome.array.array123.Array123.scala.error
array123:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if ((nums(nums.length-2) == 2) && (nums(nums.length-3) == 1)) {
    ^